@@ -8,11 +8,11 @@
 
 <h2>DuroDBMS Documentation</h2>
 
-<p>Release 0.18
+<p>Release 0.19
 
 <ul>
-<li><a href="api/html/index.html">Doxygen API docs</a></li>
 <li><a href="durodt/tut.html">Duro D/T Tutorial</a></li>
+<li><a href="api/html/index.html">Doxygen API docs</a></li>
 <li><a href="expressions.html">DuroDBMS expression syntax</a></li>
 <li><a href="utils.html">Utilities</a></li>
 <li><a href="tcl/index.html">Tcl interface</a></li>
